# vidformer

./: .gitignore  .zenodo.json  404.html  CITATION.cff  Cargo.toml  Dockerfile  README.md  THIRD-PARTY  builtin-filters.html  concepts.html  crates.js  faq.html  filters.html  getting-started-cv2.html  getting-started-dsl.html  getting-started.html  help.html  hwaccel.html  index.html  install.html  introduction.html  libvidformer.html  modules.html  opencv-filters.html  print.html  roadmap.html  search-index.js  searchindex.js  searchindex.json  settings.html  src-files.js  toc.html  toc.js  tools.html  udf-filters.html  vidformer-igni.html  vidformer-py.html
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
docs/: 404.html  book.toml  faq.html  filters.html  getting-started-cv2.html  getting-started.html  hwaccel.html  index.html  install.html  introduction.html  libvidformer.html  modules.html  opencv-filters.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-09227ebf.js  searchindex-1a504309.js  searchindex-38b6c4e8.js  searchindex-406c4cd0.js  toc-3224d524.js  toc-5825753e.js  toc.html  vidformer-igni.html  vidformer-py.html
landing-page/: index.html
misc/: Colab_Vidformer.ipynb  UDFs-demo.ipynb
playground/: index.html  worker.js
scripts/: clean.sh  deps.sh  deps_apt_ci.sh  deps_ci.sh  deps_devcontainer.sh  deps_ffmpeg.sh  deps_python.sh  deps_rust.sh  ff_patch.patch  igni-test.py  snake-pit.py  snake-pit.sh  valgrind_test.sh  vidformer.supp  viper-den.sh
search.index/: 0067e68d88b9.js  00a7c684df54.js  0257273c2e52.js  02e5f87fc839.js  033efd04dae2.js  04b06cb068be.js  058ecaaa2959.js  05bcd6bcb5c6.js  09f5f502a316.js  0b4361a4f7.js  0ca0e7e80102.js  0ccd28a4fc.js  0e4189d9cc88.js  0e4f728410dc.js  0f2e57b003a5.js  0feade3edbea.js  120b0093a9a1.js  1307236b5ca6.js  153e510c73.js  1651203ad1.js  186c9dd63726.js  1a090c40742e.js  1e3ce5defc.js  1f8343e4f1.js  1f959b58fc67.js  1fb7bc269be5.js  20894bb54c.js  20e793da9c7f.js  22211cf3b10f.js  223cb3dad4e0.js  2366f2ac2602.js  262666f79c36.js  27d0bf6311da.js  2b1742216628.js  2b53fd957b.js  2b7ec01c53.js  2bb7581b7bac.js  2be8eb2784a1.js  2c1ad2223245.js  2c8ce91fd76e.js  (+64 more)
snake-pit/: conftest.py  test_api.py  test_cv2.py  test_cv2_incremental.py  test_cv2_showcase.py  test_encoder.py  test_loader.py  test_numpy.py  test_python_library.py  test_quick_start.py  test_simple.py  test_smart_source.py  test_supervision.py  test_udf.py
vidformer/: Cargo.toml  README.md  all.html  enum.Error.html  enum.RangeTsFormat.html  fn.codecs.html  fn.create_spec_hls.html  fn.init.html  fn.run.html  fn.validate.html  index.html  sidebar-items.js  struct.CodecDescriptor.html  struct.Config.html  struct.Context.html  struct.EncoderConfig.html  struct.Range.html  struct.Stats.html
vidformer-cli/: Cargo.toml
vidformer-cli/src/: bench.rs  filters.rs  main.rs  yrden.rs
vidformer-igni/: Cargo.toml  README.md  docker-compose-db.yaml  docker-compose-local.yaml  docker-compose-prod.yaml  docker-compose.yaml  igni-local-entrypoint.sh  igni-local.toml  igni.toml  script.py  script.sh  valkey.conf
vidformer-igni/deploy/: docker-compose.db.yaml  docker-compose.local.yaml  docker-compose.prod.yaml
vidformer-igni/deploy/config/: igni.toml
vidformer-igni/deploy/config/nginx.d/: default.conf
vidformer-igni/deploy/init/: setup.sql
vidformer-igni/init/: setup.sql
vidformer-igni/src/: feb.rs  frame_block.rs  main.rs  ops.rs  schema.rs  segment.rs  server.rs
vidformer-igni/src/server/: api.rs  embedded-player.html  gc.rs  io_cache.rs  vod.rs
vidformer/array/: index.html  sidebar-items.js  struct.JsonArary.html  trait.Array.html
vidformer/dve/: enum.Error.html  enum.RangeTsFormat.html  fn.create_spec_hls.html  fn.run.html  fn.validate.html  struct.Config.html  struct.Context.html  struct.EncoderConfig.html  struct.Range.html  struct.Stats.html
vidformer/filter/: enum.Val.html  enum.ValType.html  index.html  sidebar-items.js  struct.Frame.html  struct.FrameType.html  trait.Filter.html
vidformer/filter/builtin/: fn.filters.html  index.html  sidebar-items.js  struct.Annotate.html  struct.Black.html  struct.BoundingBox.html  struct.BoundingBoxBound.html  struct.Box.html  struct.DrawBox.html  struct.DrawText.html  struct.DrawText2.html  struct.HStack.html  struct.IPC.html  struct.InlineMat.html  struct.Pad.html  struct.PlaceholderFrame.html  struct.Scale.html  struct.SliceMat.html  struct.SliceWriteMat.html  struct.Solid.html  struct.VStack.html
vidformer/filter/builtin/ipc/: struct.IPC.html
vidformer/filter/cv2/: fn.filters.html  index.html  sidebar-items.js  struct.AddWeighted.html  struct.ArrowedLine.html  struct.Circle.html  struct.CopyMakeBorder.html  struct.DrawContours.html  struct.DrawMarker.html  struct.Ellipse.html  struct.FillConvexPoly.html  struct.FillPoly.html  struct.Flip.html  struct.Hconcat.html  struct.Line.html  struct.Polylines.html  struct.PutText.html  struct.Rectangle.html  struct.Rotate.html  struct.SetTo.html  struct.Vconcat.html
vidformer/io/: index.html  sidebar-items.js  trait.IoWrapper.html  trait.ReadSeek.html
vidformer/service/: index.html  struct.Service.html
vidformer/sir/: enum.DataExpr.html  enum.Expr.html  enum.FrameExpr.html  enum.IndexConst.html  index.html  sidebar-items.js  struct.FilterExpr.html  struct.FrameSource.html
vidformer/source/: fn.create_profile_file.html  index.html  sidebar-items.js  struct.SourceFileMeta.html  struct.SourceVideoStreamMeta.html
vidformer/spec/: index.html  sidebar-items.js  struct.JsonSpec.html  trait.Spec.html  trait.SpecContext.html
vidformer/src/: array.rs  dve.rs  filter.rs  io.rs  lib.rs  pool.rs  service.rs  sir.rs  source.rs  spec.rs  util.rs
vidformer/src/av/: decoder.rs  demuxer.rs  encoder.rs  framesource.rs  mod.rs  muxer.rs
vidformer/src/filter/: builtin.rs  cv2.rs  filter_utils.rs
vidformer/src/filter/builtin/: drawutils.rs  ipc.rs
vidformer/tests/: basic_tests.rs  util_tests.rs
vidformer/util/: fn.codecs.html  fn.init.html  struct.CodecDescriptor.html
(+135 files in other folders)
