[package]
name = "vidformer-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
"num-traits" = "0.2"
"num-rational" = { version = "0.4", features=["serde"] }
"num" = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4",  "fast-rng"] }
rayon = "1.9"
vidformer = { path = "../vidformer" }
glob = "0.3.1"
flate2 = "1.0"
base64 = "0.22.1"
opencv = { version = "0.92.2", default-features = false, features = ["clang-runtime", "imgproc"] }
rusty_ffmpeg = {git = "https://github.com/dominikWin/rusty_ffmpeg", rev = "5e8ffef38be8f8d25a832cd553676a249b424c7c", features = ["link_system_ffmpeg"]}

# for VOD
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
