[package]
name = "vidformer-cli"
version = "1.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.20"
"num-traits" = "0.2"
"num-rational" = { version = "0.4", features=["serde"] }
"num" = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vidformer = { path = "../vidformer" }
glob = "0.3.1"
