[package]
name = "vidformer-igni"
version = "0.8.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid" ] }
uuid = { version = "1.7.0", features = ["v4",  "fast-rng"] }
tabled = "0.17.0"
vidformer = { path = "../vidformer" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
regex = "1"
"num-rational" = { version = "0.4", features=["serde"] }
"num" = "0.4"
