[package]
name = "vidformer-igni"
version = "1.4.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.7.0", features = ["v4",  "fast-rng"] }
tabled = "0.20.0"
vidformer = { path = "../vidformer" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
regex = "1"
"num-rational" = { version = "0.4", features=["serde"] }
"num" = "0.4"
"toml" = "0.9.2"
"rand" = "0.9.0"
zstd = "0.13"
base64 = "0.22.1"
flate2 = "1.0"
chrono = "0.4.39"
redis = "1.0.0"
tempfile = "3.16.0"
