[package]
name = "vidformer"
version = "1.4.0"
description = "Video Data Transformation Library."
authors = ["Dominik Winecki <dominikwinecki@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://ixlab.github.io/vidformer/"
repository = "https://github.com/ixlab/vidformer"
categories = ["multimedia", "multimedia::video"]

[dependencies]
rusty_ffmpeg = {version = "0.16.7", features = ["link_system_ffmpeg"]}
log = "0.4.20"
"num-traits" = "0.2"
"num-rational" = { version = "0.4", features=["serde"] }
"num" = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4",  "fast-rng"] }
rayon = "1.9"
thiserror = "2.0.3"
opencv = { version = "0.98.0", default-features = false, features = ["clang-runtime", "imgproc"] }
crossbeam-channel = "0.5"
parking_lot = "0.12.2"
opendal = { version = "0.52", features = ["layers-blocking", "services-fs", "services-http"] }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
